# utah_icg

./: .gitignore  CMakeLists.txt  gl_helpers
data/: lighting.frag  lighting.vert  lighting_fourspot_tex.frag  lighting_tex.frag
gl_helpers/: CMakeLists.txt
gl_helpers/include/: gl_common.h  gl_enum_map.h  mesh.h  mesh_internal.h  render_target.h  shader.h  string_utils.h  texture.h
gl_helpers/src/: gl_enum_map.cc  mesh.cc  render_target.cc  shader.cc  string_utils.cc  texture.cc
gl_helpers/tests/: test_obj_parser.cc
lesson_4/: CMakeLists.txt
lesson_4/common/: CMakeLists.txt  main_loop.cc  object.cc
lesson_4/common/include/: main_loop.h  object.h
lesson_4/glfw/: CMakeLists.txt
lesson_4/glfw/include/: main.h
lesson_4/glfw/src/: main.cc
lesson_4/glut/: CMakeLists.txt
lesson_4/glut/include/: main.h
lesson_4/glut/src/: main.cc  main.h
